--- a/package.json
+++ b/package.json
@@ -1,1 +1,30 @@
-
+{
+  "name": "test",
+  "version": "0.0.1",
+  "description": "Server",
+  "main": "dist/index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build"
+  },
+  "author": "marcin.lichon <marcin.lichon@nidec-ma.com>",
+  "license": "ISC",
+  "private": true,
+  "dependencies": {
+    "pinia": "^2.0.22",
+    "vue2-teleport": "^1.0.1"
+  },
+  "devDependencies": {
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@vitejs/plugin-vue2": "^2.0.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4",
+    "vue": "^2.7.10",
+    "vue-tsc": "^0.40.13",
+    "vuetify": "^2.6.10"
+  },
+  "debug": {
+    "env": {
+    }
+  }
+}
